--- a/src/components/WeatherCard.css
+++ b/src/components/WeatherCard.css
@@ -3,41 +3,29 @@
     color: gray;
 }
 
-div {
-    display: flex;
-    text-align: center;
-}
-
-#container {
-    flex-direction: column;
-    align-content: center; 
-    height: 100%;
-    margin: 5px;
-}
-
-p {
+#card-container p {
     margin: 5px;
     margin-top: 10px;
 }
 
-img {
+#card-container img {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    width: 90%;
 }
 
 #temps {
     flex-direction: row;
     align-items: stretch;
-    width: 50%;
-    margin-left: 25%;
     margin-top: 10px;
-}
-
-#temps span {
-    width: 50%;
 }
 
 #high {
     color: black;
+    margin-right: 5px;
+}
+
+#low {
+    margin-left: 5px;
 }
