--- a/src/components/WeatherForecast.css
+++ b/src/components/WeatherForecast.css
@@ -1,8 +1,16 @@
-div {
+#forecast-container {
+    text-align: center;
     display: flex;
-    flex-direction: columns;
+    flex-direction: column;
     align-content: center;
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto;
+    justify-content: center;
+}
+
+#cards {
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: space-between;
+}
 }
