--- a/src/components/DailyForecast.css
+++ b/src/components/DailyForecast.css
@@ -1,4 +1,4 @@
-#forecast-container {
+#daily-forecast-container {
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -6,11 +6,19 @@
     justify-content: center;
 }
 
-#cards {
-    text-align: center;
+#rows {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+}
+
+#rows div {
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-content: center;
+    align-items: center;
     justify-content: space-between;
 }
 
